--- a/package.json
+++ b/package.json
@@ -1,18 +1,19 @@
 {
-  "name": "react-hot-loader-examples",
+  "name": "test-task-ebuilders",
   "version": "0.0.1",
-  "description": "Examples demonstrating how to use React Hot Loader 3 with various libraries in the React ecosystem",
+  "description": "Test Task For Ebuilders",
   "main": "server.js",
   "scripts": {
     "start": "node server"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/calesce/react-hot-loader-examples"
+    "url": "https://github.com/chesnishyy/test_task_ebuilders"
   },
-  "author": "Cale Newman <newman.cale@gmail.com> (http://github.com/calesce)",
+  "author": "Igor Chesnishyy",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "3.3.7",
     "express": "^4.14.0"
   },
   "devDependencies": {
@@ -21,13 +22,17 @@
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "css-loader": "0.28.7",
     "eslint": "^3.6.1",
     "eslint-plugin-react": "^6.3.0",
+    "node-sass": "4.7.2",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-hot-loader": "^3.0.0-beta.5",
     "react-router": "^2.8.1",
-    "webpack": "^1.13.2",
+    "sass-loader": "6.0.6",
+    "style-loader": "0.19.1",
+    "webpack": "1.15.0",
     "webpack-dev-middleware": "^1.8.3",
     "webpack-hot-middleware": "^2.12.2"
   }
